--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,15 @@
 #spring.datasource.username=
 #spring.datasource.password=
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql=trace
+#h2 세팅
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.open-in-view=false
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
