--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#spring.datasource.url=
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://project01-db.cwmhlkqc4fam.ap-northeast-2.rds.amazonaws.com:3306/bunjang
+spring.datasource.username=lovelyAlien
+spring.datasource.password=ni**as1n8is
+spring.jpa.hibernate.ddl-auto=update
 
 #h2 세팅
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
 
 
 
 spring.jpa.open-in-view=false
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
