--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,16 @@ spring.datasource.username=lovelyAlien
 spring.datasource.password=ni**as1n8is
 spring.jpa.hibernate.ddl-auto=update
 
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.jpa.open-in-view=false
+
 #h2 세팅
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
 
 
-
-spring.jpa.open-in-view=false
-
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql=trace
